# mcp-cli-project

./: .gitignore  CLAUDE.md  README.md  devcontainer.json  main.py  mcp_client.py  mcp_server.py  pyproject.toml
.devcontainer/: devcontainer.json
core/: cli.py  cli_chat.py
