[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.51.0",
    "mcp[cli]>=1.8.0",
    "prompt-toolkit>=3.0.51",
    "python-dotenv>=1.1.0",
]

[tool.ruff]
line-length = 130

[tool.ruff.lint]
# E501 = line too long (ruff handles it by default based on the line-length)
select = ["E", "F", "W"]   # flake8-compatible rules
ignore = []
